<?xml version="1.0" encoding="utf-8"?>

<!--

//****************************************************************************
// File Name: activity_about_us.xml
// Team Name:group 01
// Team Members: Stephanie Allen, Jose Barron, Emily Gutierrez-Alvarez, Jarrod Merryman
// Thomas Schroeder, and Christina Wade
// Class:CPSC 544-50
// Semester: Fall 2016
// Summary of Code in file: This is an XML file that was automatically created by android studio
// the information in this xml file are for the aboutUSActivity here you will find things such as
// the colors we used, the strings that we used, and the spacing between widgets.
// ***************************************************************************


-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cpsc544.stacksort.AboutUSActivity"
    tools:showIn="@layout/activity_about_us">


    <!--
    //****************************************************************************************
    /// The lines below give values to the back button, the values include the color, size and text
    // that is written in the button
    // ****************************************************************************************-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:id="@+id/back_btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/buttonColor"
            android:textColor="@color/colorPrimary"></Button>
            <!--
    //****************************************************************************************
    // The lines found below are for the text box found at the top of the application.
    // here you will find the value that was written inside of the text field as well as the size,
    // and color of the text
    // ****************************************************************************************-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aboutUsTopText"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/topTextSize"
            android:textColor="@color/colorPrimary" />
            <!--
    //****************************************************************************************
    // The lines below has the parameters for the text field that states Members of Team 01 Include:
    // The information that is held here is the text that is shown to the user, and the size and color
    // of the font
    // ****************************************************************************************-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/membersTitle"
            android:id="@+id/textView6"
            android:layout_marginTop="@dimen/middleTextMarginAbout"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/middleTextSizeAbout"
            android:textColor="@color/colorPrimary" />
            <!--
    //****************************************************************************************
    // The lines below has the parameters for the text field that informs the user of the who the
    // members of the team are.  In addition you will find the font size, and color found in the text
    // view
    // ****************************************************************************************-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamMemberNames"
            android:id="@+id/textView7"
            android:textSize="@dimen/nameSize"
            android:layout_alignTop="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
